# brlapi-rust

./: Cargo.toml
examples/: simple.rs
libbrlapi-sys/: Cargo.toml  build.rs  build.sh
libbrlapi-sys/src/: bindings.rs  lib.rs
src/: lib.rs
